--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,12 @@
 <!--Navigation tag-->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <div class="container-fluid">
     <%= link_to "Zef Blog", root_path, class: "navbar-brand", id: "logo" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
@@ -21,13 +22,17 @@
           </ul>
         </li>
 
+        <li class="nav-item">
+            <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
+        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Messages
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <% if logged_in? %>
-              <li><%= link_to "New message", new_article_path, class: "dropdown-item" %></li>
+              <%= link_to "New message", new_article_path, class: "dropdown-item" %>
             <% end %>
             <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
@@ -35,21 +40,22 @@
           </ul>
         </li>
 
-        <% if logged_in? && @user == current_user %>
+        <% if logged_in? %>
+          <li class="nav-item">
+            <%= link_to current_user.username, user_path(current_user), class: "nav-link active", aria_current: "page" %>
+          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= current_user.username %>
+              Profile [<%= current_user.username %>]
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "Edit Your Profile", edit_user_path(@user), class: "dropdown-item" %></li>
+              <li><%= link_to "View Your Profile", user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "Edit Your Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
             </ul>
           </li>
             <%= link_to "Logout", logout_path, class: "btn btn-danger", aria_current: "page", method: :delete %>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
-          </li>
           <li class="nav-item">
             <%= link_to "Log in", login_path, class: "nav-link active", aria_current: "page" %>
           </li>
