admin user capability added, user restrictions created, alert messages in red

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,7 +8,7 @@
 
 body {
   background: #2c2b2b;
-  color: #F5F8F8;
+  color: #Ffffff;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .done {
@@ -387,7 +387,7 @@ p a {
 .navbar {
   background-color: #2c2b2b !important;
 }
-.navbar .dropdown-item {
+.navbar {
   color: #2c2b2b !important;
 }
 .nav-link {
@@ -407,6 +407,8 @@ p a {
 #logo:hover {
   color: #f3a007 !important;
 }
+
+
 
 /* Set the border color */
           
