--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -46,11 +46,12 @@
           
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Profile [<%= current_user.username %>]
+              <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><%= link_to "View Your Profile", user_path(current_user), class: "dropdown-item" %></li>
               <li><%= link_to "Edit Your Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %></li>
             </ul>
           </li>
             <%= link_to "Logout", logout_path, class: "btn btn-danger", aria_current: "page", method: :delete %>
