--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,9 +24,17 @@
                 </h5>
                 <h4 class="card-text"><%= pluralize(user.articles.count, "article") %></h4>
                 <%= link_to "View Profile", user, class: "btn btn-outline-success" %>
-                <% if logged_in? and user == current_user %>
-                  <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info" %>
+                
+                <% if logged_in? %>
+                  <% if user == current_user %>
+                    <%= link_to "Edit Profile", edit_user_path(user), class: "btn btn-outline-info" %>
+                  <% end %>
+                  <% if current_user.admin? %>
+                    <%= link_to "Delete User", user_path(user), class: "btn btn-outline-danger",
+                    method: :delete, data: { confirm: "Are you sure you want to delete the user and all associated messages?" } %>
+                  <% end %>
                 <% end %>
+                
               </div>
               <div class="card-footer text-muted">
                 <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>
