--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,22 +2,14 @@
   <title>Home</title>
 </head>
 
-<section class="hero container mt-4">
-  <h2>Welcome to my website!</h2>
-</section>
+<div class="bg-light p-5 text-center rounded-lg m-5" id="home-container">
+  <h1 class="display-5 text-light">Welcome!</h1>
+  <p class="lead text-light">Checkout my journey through coding on the "About" menu.</p>
 
-<section>
-  <div class="lead container mb-5">
-   
-    <%= link_to "Log in!", login_path, class: "btn btn-success btn-lg me-2" %>
-    or  
-    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg ms-2" %>
-    
-  </div>
-</section>
-
-<section class="row-alt mb-5">
-  <div class="lead container mt-2">
-    <p>CRUD feature available!</p>
-  </div>
-</section>
+  <section class="lead container mt-5">
+    <%= link_to "Log in", login_path, class: "btn btn-success btn-lg me-3" %>
+    |  
+    <%= link_to "Sign up", signup_path, class: "btn btn-success btn-lg ms-3" %>
+  </section>
+  
+</div>
