homepage image adjusted

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -247,11 +247,11 @@ p a {
 }
 
 #home-container {
-  background-image: image-url('home/DSC_0025.JPG');
+  background-image: image-url('home/DSC_0025_small.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 0 500px;
+  border-radius: 1%;
 }
 
 /*
