homepage layout updated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,11 @@
   <h1 class="display-5 text-light">Welcome!</h1>
   <p class="lead text-light">Checkout my journey through coding on the "About" menu.</p>
 
+  <%= link_to "Log in", login_path, class: "btn btn-success btn-lg me-3 mt-5" %>
+  <%= link_to "Sign up", signup_path, class: "btn btn-success btn-lg ms-3 mt-5" %>
+
   <div class="lead container mt-5">
-    <%= link_to "Log in", login_path, class: "btn btn-success btn-lg me-3" %>
-    |  
-    <%= link_to "Sign up", signup_path, class: "btn btn-success btn-lg ms-3" %>
+    
   </div>
   
 </div>
