--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 </head>
 
 <div class="bg-light p-5 text-center rounded-lg m-5" id="home-container">
-  <h1 class="display-5 text-light">Welcome!</h1>
+  <h1 class="display-5 text-light">Welcome to my demo-blog!</h1>
   <p class="lead text-light">Checkout my journey through coding on the "About" menu.</p>
   <%= link_to "Log in", login_path, class: "btn btn-success btn-lg me-3 mt-5" %>
 </div>
