--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,8 +15,8 @@
             About
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><%= link_to "Learning back-end", back_end_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Learning front-end", front_end_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Back-end", back_end_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Front-end", front_end_path, class: "dropdown-item" %></li>
             <li><hr class="dropdown-divider"></li>
             <li><%= link_to "About Filipe", about_path, class: "dropdown-item" %></li>
           </ul>
@@ -35,8 +35,6 @@
               <%= link_to "New message", new_article_path, class: "dropdown-item" %>
             <% end %>
             <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><%= link_to "TBD", root_path, class: "dropdown-item" %></li>
           </ul>
         </li>
 
