--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,10 @@
   <title>Index</title>
 </head>
 
-<section class="hero container">
-  <h2>Zef Bloggers</h2>
+<section class="row-alt mt-3 mb-5">
+  <div class="lead container mt-2">
+    <h2>Zef Bloggers</h2>
+  </div>
 </section>
 
 <div class="flickr_pagination">
