--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,8 @@
 <head> 
-  <title>New User</title>
+  <title>Sign up</title>
 </head>
 
-<section class="hero container">
-  <h2>Signup!</h2>
-</section>
-
-<section class="row">
+<section class="row mt-5">
   <div class="grid">
 
     <%= render 'form' %>
