--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,7 +2,7 @@
 
 /*
   ========================================
-  Custom styles
+  Application
   ========================================
 */
 
@@ -11,9 +11,14 @@ body {
   color: #ffffff;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+#page-content {
+  flex: 1 0 auto;
+  /*background-color: lightgrey;*/
+}
 .done {
   color: #1d8005;
 }
+
 
 /*
   ========================================
@@ -21,19 +26,10 @@ body {
   ========================================
 */
 
-html {
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-     -moz-box-sizing: inherit;
-          box-sizing: inherit;
-}
+
 .grid {
   margin: 0 auto;
-  width: 960px;
+  width: 900px;
 }
 .col-1-3 {
   width: 33.33%;
@@ -60,8 +56,6 @@ html {
   padding: 66px 0 44px 0;
 }
 .row-alt {
-    min-width: 960px;
-   background: #4d5153;
    background: -webkit-linear-gradient(to right, #2e2d35, #646964);
    background:    -moz-linear-gradient(to right, #2e2d35, #646964);
    background:         linear-gradient(to right, #2e2d35, #646964);
@@ -108,9 +102,6 @@ h6 {
 strong {
   font-weight: 400;
 }
-cite, em {
-  font-style: italic;
-}
 
 /*
   ========================================
@@ -120,10 +111,6 @@ cite, em {
 
 .lead {
   text-align: center;
-}
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
 }
 
 /*
@@ -168,7 +155,7 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #a9b2b9;
+  color: #dfe2e5;
 }
 p a {
   border-bottom: 1px solid #dfe2e5;
@@ -317,16 +304,6 @@ p a {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-/*
-  ========================================
-  Back-end
-  ========================================
-*/
-
-.container {
-  width: 960px;
 }
 
 /*
