--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,15 +2,11 @@
   <title>Messages</title>
 </head>
 
-<section class="hero container">
-  <h2>Messages</h2>
-</section>
-
-<section class="row-alt">
+<section class="row-alt mt-5">
   <div class="lead container">
-    <p>Be kind and leave a message (login required).</p>
+    <p>Be kind and leave a message<%= " (login required)" if !logged_in? %>.</p>
     <% if logged_in? %>
-      <%= link_to "New message", new_article_path, class: "btn btn-outline-info btn-lg" %>
+      <%= link_to "New message", new_article_path, class: "btn btn-success" %>
     <% end %>
   </div>
 </section>
