--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer id="sticky-footer" class="py-4 bg dark">
+<footer id="sticky-footer" class="py-4 bg light">
   <div class="container text-center">
     <small>&copy; <%= link_to "Filipe Zeferino", about_path, class: "text-white" %></small>
   </div>
