--- a/app/views/pages/back_end.html.erb
+++ b/app/views/pages/back_end.html.erb
@@ -19,7 +19,7 @@
     <section class="teaser col-1-3">
       <h5 class="text-center">Udemy</h5>
 
-      <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG") + "Ruby on Rails Developer Course", "https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/", class: "teaser", title: "Currently on class 152 out of 446 (34% completed)", target: :_blank %>
+      <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG") + "Ruby on Rails Developer Course", "https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/", class: "teaser", title: "Currently on class 223 out of 446 (50% completed)", target: :_blank %>
      
       <h3></h3>
       <h4>Learn to make innovative web apps with Ruby on Rails and unleash your creativity</h4>
@@ -87,63 +87,41 @@
   </div>
 </section>
 
-<!--Coding - Overall-->
+<!--SQL-->
 
-<section class="row-alt">
+<section class="row-alt mt-4">
   <div class="lead container">
-    <h2>Coding - Overall Aspects</h2>
-    <p>Content to backup learning with references for a deeper understanding of all coding aspects.</p>
+    <h2>SQL</h2>
+    <p>(hover over the images to check the course status)</p>
   </div>
 </section>
 
 <section class="row-mine">
   <div class="grid">
 
-    <section class="teaser col-1-3">
-      <section class="hero4 container">
-        
-        <h3 class="done"><strong>Articles (all covered)</strong></h3>
-      
-        <ul>
-          <li>
-          <%= link_to "An Introduction To Software Development Methodologies", "https://www.alliancesoftware.com.au/introduction-software-development-methodologies/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "8 Ways to Become a Better Coder", "https://newrelic.com/blog/nerd-life/8-ways-become-a-better-coder/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "A guide to naming things in programing", "https://levelup.gitconnected.com/a-guide-for-naming-things-in-programming-2dc2d74879f8/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "8 Ways to Hone Your Programming Skills and Become a Better Coder", "https://blog.appdynamics.com/engineering/8-ways-to-hone-your-programming-skills-and-become-a-better-coder/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "10 tips for becoming a better programmer", "https://www.techrepublic.com/article/10-tips-for-becoming-a-better-programmer/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "Eight Rules for Effective Software Production", "https://www.toptal.com/it/eight-rules-for-software-production/", target: :_blank, class: "done" %>
-          </li>
-          <li>
-          <%= link_to "Zen of Python", "https://www.python.org/dev/peps/pep-0020/", target: :_blank, class: "done" %>
-          </li>     
-        </ul>
-      </section>
+    <!--SQL 1-->
 
-      <section class="hero4 container">
-        <h3><strong>Books (not started)</strong></h3>
-        <ul class="about">
-          <li>
-          <%= link_to "Orientação a Objetos: Aprenda seus conceitos e suas aplicabilidades de forma efetiva", "https://www.amazon.com.br/Orienta%C3%A7%C3%A3o-Objetos-Aprenda-conceitos-aplicabilidades-ebook/dp/B01LXHG8HX/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2SMT1M8J5QZ1&dchild=1&keywords=orienta%C3%A7%C3%A3o+a+objetos&qid=1626298255&s=digital-text&sprefix=orienta%C3%A7%C3%A3o+a+o%2Cdigital-text%2C306&sr=1-1/", target: :_blank %>
-          </li>
-          <li>
-          <%= link_to "Clean Code", "https://www.amazon.com.br/Clean-Code-Handbook-Software-Craftsmanship-ebook/dp/B001GSTOAM/ref=sr_1_1?__mk_pt_BR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=clean+code&qid=1626297940&s=digital-text&sr=1-1/", target: :_blank %>
-          </li>
-          <li>
-          <%= link_to "Pragmatic Programmer", "https://www.amazon.com.br/Pragmatic-Programmer-Journeyman-Master-English-ebook/dp/B003GCTQAE/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=/", target: :_blank %>
-          </li>
-          <li>
-          <%= link_to "Design Patterns", "https://www.amazon.com.br/Design-Patterns-Object-Oriented-Addison-Wesley-Professional-ebook/dp/B000SEIBB8/ref=reads_cwrtbar_3/140-0923922-7614649?pd_rd_w=hlvVY&pf_rd_p=f0989065-fdf0-44f6-89ba-12ac8c8cc0a8&pf_rd_r=DHPEM72K3G06XYRJ0M8A&pd_rd_r=d9c63e2a-110e-4ed5-a836-30dcf50f9b43&pd_rd_wg=UYutF&pd_rd_i=B000SEIBB8&psc=1/", target: :_blank %>
-          </li>    
-        </ul>
-      </section>
+    <section class="teaser col-1-3">
+      <h3 class="done text-center"><strong>Concluded!</strong></h3>
+      <h5 class="text-center">SQLCourse.com</h5>
+
+      <%= link_to image_tag("sql/sql-course1.PNG") + "SQL Course 1", "https://www.sqlcourse.com/", class: "teaser", title: "Concluded on January 2022", target: :_blank %>
+     
+      <h3></h3>
+      <h4>The basics of each SQL command.</h4>
+    </section><!--
+
+    One Bit Code - Pure Ruby
+    
+    --><section class="teaser col-1-3">
+      <h3 class="done text-center"><strong>Concluded!</strong></h3>
+      <h5 class="text-center">SQLCourse.com</h5>
+
+      <%= link_to image_tag("sql/sql-course2.PNG") + "SQL Course 2", "https://www.sqlcourse2.com/", class: "teaser", title: "Concluded on January 2022", target: :_blank %>
+
+      <h3></h3>
+      <h4>Advanced features and clauses of the SELECT statement.</h4>
     </section>
+
+  </div>
+</section>
