--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,10 @@
   <title>Edit User</title>
 </head>
 
-<section class="hero container">
-  <h2>Edit your profile</h2>
+<section class="row-alt mt-3 mb-5">
+  <div class="lead container mt-2">
+    <h2>Edit your profile</h2>
+  </div>
 </section>
 
 <section class="row">
