--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,17 @@
   <title>User Profile</title>
 </head>
 
-<section class="hero container">
-  <h2><%= @user.username %>'s profile</h2>
+<section class="row-alt mt-3 mb-5">
+  <div class="lead container mt-2">
+    <h2><%= @user.username %>'s profile</h2>
+  </div>
 </section>
 
 <%= gravatar_for  @user, size: 200 %>
 
 <% if logged_in? && @user == current_user %>
   <div class="text-center mt-4 mb-4">
-    <%= link_to "Edit Your Profile", edit_user_path(@user), class: "btn btn-outline-info" %>
+    <%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-outline-light" %>
   </div>
 <% end %>
 
