pages layout updated, width removed from grid

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,6 +29,6 @@
 </div>
 
 <div class="lead container mt-3 mb-3">
-    <%= link_to "Return to Messages", articles_path, class: "btn btn-outline-light"  %>
+    <%= link_to "Cancel", articles_path, class: "btn btn-danger"  %>
 </div>
 
