--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,6 +25,7 @@
         <div class="about-info">
 
           <%= image_tag("about/profile-new.jpg") %>
+          <h4>Profiles:</h4>
 
           <ul>
             <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
