--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,3 +35,7 @@
     </div>
   </div>
 </div>
+
+<div class="lead container mt-3 mb-3">
+    <%= link_to "Cancel", root_path, class: "btn btn-danger"  %>
+</div>
