--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,9 @@ body {
   color: #ffffff;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+.row {
+  background: #2c2b2b;
+}
 #page-content {
   flex: 1 0 auto;
   /*background-color: lightgrey;*/
@@ -29,7 +32,7 @@ body {
 
 .grid {
   margin: 0 auto;
-  width: 900px;
+  
 }
 .col-1-3 {
   width: 33.33%;
@@ -53,7 +56,7 @@ body {
 */
 
 .row-mine {
-  padding: 66px 0 44px 0;
+  padding: 66px 30px 44px 30px;
 }
 .row-alt {
    background: -webkit-linear-gradient(to right, #2e2d35, #646964);
@@ -342,17 +345,6 @@ p a {
   background-color: #575555 !important;
 }
 
-
-/*
-  ========================================
-  General
-  ========================================
-*/
-
-.row {
-  background: #2c2b2b;
-}
-
 /*
   ========================================
   Navbar
@@ -393,15 +385,11 @@ p a {
   color: #f3a007 !important;
 }
 
-
-
 /* Set the border color */
           
 .custom-toggler.navbar-toggler {
   border-color: gray;
 }
-
-
 
 /*
   ========================================
