--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,8 +13,16 @@
         
         <div class="form-group row", id="form">
           <%= f.label :description, class: "col-2 col-form-label text-light" %>
-          <div class="col-10 mb-3"> 
+          <div class="col-10 mb-3">
             <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Message's description" %>
+          </div>
+        </div>
+
+        <div class="form-group row", id="form">
+          <%= f.label :category, class: "col-2 col-form-label text-light" %>
+          <div class="col-10 mb-3"> 
+            <%= f.collection_select(:category_ids, Category.all, :id, :name, 
+            { prompt: "Make your selection from the list below (can be empty)" }, { multiple: true, size: 4, class: "form-select shadow rounded" }) %>
           </div>
         </div>
 
