--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <div class="container-fluid">
-    <%= link_to "Zef Blog", root_path, class: "navbar-brand", id: "logo" %>
+    <%= link_to "about", about_path, class: "navbar-brand", id: "logo" %>
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,6 +35,18 @@
               <%= link_to "New message", new_article_path, class: "dropdown-item" %>
             <% end %>
             <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Categories
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in? && current_user.admin? %>
+              <%= link_to "New category", new_category_path, class: "dropdown-item" %>
+            <% end %>
+            <li><%= link_to "View categories", categories_path, class: "dropdown-item" %></li>
           </ul>
         </li>
 
