--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,11 +1,14 @@
 <div class="container">
       <% @articles.each do |article| %>
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <div class="col-8 mt-4">
             <div class="card text-center shadow mb-5 bg-white rounded">
               <div class="card-header font-italic">
                 <% if article.user %>
                   by <%= link_to article.user.username, user_path(article.user) %>
+                <% end %>
+                <% if article.categories.any? %>
+                  <div class="mt-2"><%= render article.categories %></div>
                 <% end %>
               </div>
               <div class="card-body">
