--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,18 +1,16 @@
 <head> 
-  <title>User Profile</title>
+  <title>Category</title>
 </head>
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2><%= @user.username %>'s profile</h2>
+    <h2>Category: <%= @category.name %></h2>
   </div>
 </section>
 
-<%= gravatar_for  @user, size: 200 %>
-
-<% if logged_in? && @user == current_user %>
+<% if logged_in? && current_user.admin? %>
   <div class="text-center mt-4 mb-4">
-    <%= link_to "Edit Profile", edit_user_path(@user), class: "btn btn-outline-light" %>
+    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-light" %>
   </div>
 <% end %>
 
