--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2>Zef Bloggers</h2>
+    <h2>Bloggers</h2>
   </div>
 </section>
 
@@ -14,7 +14,7 @@
 
 <div class="container">
       <% @users.each do |user| %>
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
           <div class="col-8 mt-4">
             <div class="card text-center shadow mb-5 bg-white rounded">
               <div class="card-header font-italic">
