about2 page updated, runing tests to check renderizatino on mobile phone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,6 +50,9 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+.col-1-2 {
+  width: 50%;
+}
 
 /*
   ========================================
@@ -313,7 +316,6 @@ p a {
   margin: -66px 0 22px 0;
   vertical-align: top;
 }
-
 .about ul {
   list-style-type: none;
   margin: 0;
