--- a/app/views/pages/about_new.html.erb
+++ b/app/views/pages/about_new.html.erb
@@ -7,8 +7,8 @@
 
     <section class="about">
 
-      <aside class="col-1-3 content-center">
-        <div>
+      <aside class="col-1-3">
+        <div class="about-info" >
           <%= image_tag("about/profile-new.jpg") %>
 
             <h5 class="mt-3">profiles</h5>
