--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,10 @@
 <head> 
-  <title>New Message</title>
+  <title>New Article</title>
 </head>
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2>New Message</h2>
+    <h2>New Article</h2>
   </div>
 </section>
 
