--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,6 @@
 
 <div class="bg-light p-5 text-center rounded-lg m-5" id="home-container">
   <h1 class="display-5 text-light">Welcome!</h1>
-  <p class="lead text-light fw-bolder">I'm super excited to have you here, be kind and browse through the menu and 
-  check a little bit more about me and what I could learn so far on software development.</p>
-  <%= link_to "Log in", login_path, class: "btn btn-success btn-lg me-3 mt-5" %>
+  <%= link_to "Log in", login_path, class: "btn btn-success btn-lg m-5" %>
+  <p class="lead text-light fw-bolder mt-3">I'm super excited to have you here! Be kind and browse :)</p>
 </div>
