--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,7 +33,7 @@
                   <% end %>
                   <% if current_user.admin? %>
                     <%= link_to "Delete User", user_path(user), class: "btn btn-outline-danger",
-                    method: :delete, data: { confirm: "Are you sure you want to delete the user and all associated messages?" } %>
+                    method: :delete, data: { confirm: "Are you sure you want to delete the user and all associated articles?" } %>
                   <% end %>
                 <% end %>
                 
