--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,11 +31,6 @@ body {
   ========================================
 */
 
-
-.grid {
-  margin: 0 auto;
-  
-}
 .col-1-3 {
   width: 33.33%;
 }
@@ -50,8 +45,8 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-.col-1-2 {
-  width: 50%;
+.col-3-4 {
+  width: 75%;
 }
 
 /*
@@ -123,37 +118,6 @@ strong {
 
 /*
   ========================================
-  Buttons
-  ========================================
-*/
-
-.btn-mine {
-  border-radius: 5px;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  letter-spacing: .5px;
-  margin: 0;
-  text-transform: uppercase;
-}
-.btn-mine:hover {
-  background: #f3a007;
-  color: #4d5153;
-
-}
-.btn-alt {
-  border: 1px solid #ffffff;
-  padding: 10px 30px;
-}
-.btn-alt:hover {
-  background: #f3a007;
-  color: #4d5153;
-}
-
-
-/*
-  ========================================
   Links
   ========================================
 */
@@ -169,27 +133,6 @@ p a {
   border-bottom: 1px solid #dfe2e5;
 }
 
-/*
-  ========================================
-  Primary header
-  ========================================
-*/
-
-.logo {
-  border-top: 4px solid #f3a007;
-  float: left;
-  font-size: 48px;
-  font-weight: 100;
-  letter-spacing: .5px;
-  line-height: 44px;
-  padding: 40px 0 22px 0;
-  text-transform: uppercase;
-  text-align: center;
-}
-.tagline {
-  margin: 66px 0 22px 0;
-  text-align: right;
-}
 
 /*
   ========================================
@@ -227,19 +170,6 @@ p a {
   ========================================
 */
 
-.hero {
-  color: #ffffff;
-  line-height: 44px;
-  padding: 22px 80px 50px 80px;
-  text-align: center;
-}
-.hero h2 {
-  font-size: 36px;
-}
-.hero p {
-  font-size: 24px;
-  font-weight: 100;
-}
 .teaser a:hover h3 {
   color: #a9b2b9;
 }
@@ -249,7 +179,6 @@ p a {
   margin-bottom: 22px;
   max-width: 100%
 }
-
 #home-container {
   background-image: image-url('home/DSC_0025_small.jpg');
   background-position: center center;
@@ -258,41 +187,6 @@ p a {
   border-radius: 0.5%;
 }
 
-/*
-  =============================================
-  About | Back-end | Front-end
-  =============================================
-*/
-
-.hero2 {
-  color: #ffffff;
-  line-height: 44px;
-  padding: 32px 80px 10px 80px;
-  text-align: center;
-}
-.hero2 h2 {
-  font-size: 36px;
-}
-.hero3 {
-  color: #ffffff;
-  line-height: 44px;
-  padding: 10px 80px 10px 80px;
-  text-align: left;
-}
-.hero3 h2 {
-  font-size: 36px;
-}
-.hero4 {
-  color: #ffffff;
-  padding: 10px 80px 10px 80px;
-  text-align: left;
-}
-.hero4 h2 {
-  font-size: 36px;
-}
-.hero4 ul {
-  list-style-type: none;
-}
 
 /*
   ========================================
@@ -320,6 +214,18 @@ p a {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+#about-container {
+  background-image: image-url('about/unsplash-sw3.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 0.5%;
+}
+
+#about-container h2, h5, h6 {
+  color: lightgray;
+  font-weight: 500;
 }
 
 /*
@@ -364,16 +270,6 @@ p a {
   ========================================
 */
 
-.btn-mine-nav {
-  border-radius: 5px;
-  color: #ffffff;
-  background: #f3a007;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  letter-spacing: .5px;
-  margin: 0;
-}
 .navbar {
   background-color: #2c2b2b !important;
 }
@@ -384,17 +280,6 @@ p a {
   color: #ffffff !important;
 }
 .nav-link:hover {
-  color: #f3a007 !important;
-}
-#logo {
-  float: left;
-  font-size: 1.7em;
-  color: #ffffff; 
-  
-  letter-spacing: -1px;
-  font-weight: bold;
-}
-#logo:hover {
   color: #f3a007 !important;
 }
 
