--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,14 +7,14 @@
         <div class="form-group row", id="form">
           <%= f.label :title, class: "col-2 col-form-label text-light mb-3" %>
           <div class="col-10", id="form" >
-            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Message's title" %>
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Article's title" %>
           </div>
         </div>
         
         <div class="form-group row", id="form">
           <%= f.label :description, class: "col-2 col-form-label text-light" %>
           <div class="col-10 mb-3">
-            <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Message's description" %>
+            <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Article's description" %>
           </div>
         </div>
 
