--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,10 +1,10 @@
 <head> 
-  <title>Edit Message</title>
+  <title>Edit Article</title>
 </head>
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2>Edit Message</h2>
+    <h2>Edit Article</h2>
   </div>
 </section>
 
