--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,39 +2,30 @@
   <title>Filipe Zeferino</title>
 </head>
 
-<section class="row-mine">
-  <div class="grid">
-
-    <section class="about">
-      <div class="col-2-3">
+<div class="container">
+  <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
+    <div class="col-3-4">
+      <div class="bg-light p-5 rounded-lg" id="about-container">
         <div>
           <h2>Filipe Zeferino</h2>
-          <h6>Electrical Engineer (UFSC/2010), currently coordinating the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville. Extensive experience with project coordination related to product change.</h6>
-          <h6>Interested and fond of technology, I observe in the programming activity great affinity with my profile and personal skills.</h6>
-          <h6>I'm eager to implement what I could learn so far on a professional environmet, I hope that through this website you can find some use for my skills :)</h6>
+          <h6>Fond of technology, eager and dedicated to learn Software Engineering. I hope that through this website you can find some use for
+            my skills :)</h6>
+          <h6>Check what I covered so far on my learning journey and implementation (CRUD):</h6>
+          <%= link_to "front-end", front_end_path, class: "btn btn-primary m-1", target: :_blank %>
+          <%= link_to "back-end", back_end_path, class: "btn btn-primary m-1", target: :_blank %>
+          <%= link_to "CRUD", articles_path, class: "btn btn-success m-1", target: :_blank %>
+          <h6 class="mt-2">You can also check this website repository at &copy; <%= link_to "Github", "https://github.com/filipezef/zeferino-blog", target: :_blank %></h6>
         </div>
 
         <div class="mt-5">
-          <h5>Carreer Goals</h5>
-          <h6>To restart the carreer as Software Engineer and buid up the knowledge and experience that will allow me to reach the seniority on the field.</h6>
-          <h6>I want to remain motivated, challenged and valued, facing a feasible and reliable professional road map.</h6>
+          <h5>Background</h5>
+          <h6>Electrical Engineer (UFSC/2010), currently coordinating the motor and electrical components subsystem at Nidec-GA/Embraco, Joinville.
+            Extensive experience with project coordination related to product change. You can dig in more at &copy; <%= link_to "linkedin",
+            "https://www.linkedin.com/in/filipezef", target: :_blank %>.</h6>
         </div>
-      </div><!--
-
-      --><aside class="col-1-3">
-        <div class="about-info">
-
-          <%= image_tag("about/profile-new.jpg") %>
-          <h4>Profiles:</h4>
-
-          <ul>
-            <li><%= link_to "Github", "https://github.com/filipezef", target: :_blank %></li>
-            <li><%= link_to "HackerRank", "https://www.hackerrank.com/filipezef", target: :_blank %></li>
-            <li><%= link_to "linkedin", "https://www.linkedin.com/in/filipezef", target: :_blank %></li>
-          </ul>
-        </div>
-      </aside>
-    </section>
-
+      </div>
+    </div>
   </div>
-</section>
+</div>
+
+
