--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
   </div>
 <% end %>
 
-<h5 class="text-center mt-4">Messages</h5>
+<h5 class="text-center mt-4">Articles</h5>
 
 <div class="flickr_pagination">
   <%= will_paginate @articles, :container => false %>
