--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,51 +2,42 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <div class="container-fluid">
-    <%= link_to "home", root_path, class: "nav-link active", aria_current: "page" %>
+    <%= link_to "Home", root_path, class: "navbar-brand", id: "logo" %>
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+        
         <li class="nav-item">
-            <%= link_to "about", about_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "About", about_path, class: "nav-link active", aria_current: "page" %>
         </li>
 
         <% if logged_in? %>
           <li class="nav-item">
-              <%= link_to "bloggers", users_path, class: "nav-link active", aria_current: "page" %>
+              <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              articles
+              Messages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "New article", new_article_path, class: "dropdown-item" %></li>
-              <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              categories
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <% if current_user.admin? %>
-                <li><%= link_to "New category", new_category_path, class: "dropdown-item" %><li>
+              <% if logged_in? %>
+                <%= link_to "New message", new_article_path, class: "dropdown-item" %>
               <% end %>
-              <li><%= link_to "View categories", categories_path, class: "dropdown-item" %></li>
+              <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
             </ul>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= "(Admin)" if current_user.admin? %> Profile [<%= current_user.username %>]
+              <%= "(Admin)" if current_user.admin? %> <%= current_user.username %>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "View Your Profile", user_path(current_user), class: "dropdown-item" %></li>
-              <li><%= link_to "Edit Your Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "View Profile", user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
               <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %></li>
             </ul>
           </li>
@@ -54,13 +45,13 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "log in", login_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "Log in", login_path, class: "nav-link active", aria_current: "page" %>
           </li>
           <li class="nav-item">
-            <%= link_to "sign up", signup_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "Sign up", signup_path, class: "nav-link active", aria_current: "page" %>
           </li>
         <% end %>
-
+        
       </ul>
     </div>
   </div>
