navbar styles adjusted

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -272,6 +272,7 @@ p a {
 
 .navbar {
   background-color: #2c2b2b !important;
+  letter-spacing: 1.4px;
 }
 .navbar {
   color: #2c2b2b !important;
