--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,44 +11,44 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-            <%= link_to "About", about_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "About", about_path, class: "nav-link active fw-bold", aria_current: "page" %>
         </li>
 
         <% if logged_in? %>
           <li class="nav-item">
-              <%= link_to "Bloggers", users_path, class: "nav-link active", aria_current: "page" %>
+              <%= link_to "Bloggers", users_path, class: "nav-link active fw-bold", aria_current: "page" %>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Messages
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <% if logged_in? %>
-                <%= link_to "New message", new_article_path, class: "dropdown-item" %>
+                <%= link_to "New message", new_article_path, class: "dropdown-item fw-bold" %>
               <% end %>
-              <li><%= link_to "View messages", articles_path, class: "dropdown-item" %></li>
+              <li><%= link_to "View messages", articles_path, class: "dropdown-item fw-bold" %></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= "(Admin)" if current_user.admin? %> <%= current_user.username %>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "View Profile", user_path(current_user), class: "dropdown-item" %></li>
-              <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
-              <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %></li>
+              <li><%= link_to "View Profile", user_path(current_user), class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger fw-bold", method: :delete, data: { confirm: "Are you sure?" } %></li>
             </ul>
           </li>
             <%= link_to "Logout", logout_path, class: "btn btn-danger", aria_current: "page", method: :delete %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Log in", login_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "Log in", login_path, class: "nav-link active fw-bold", aria_current: "page" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign up", signup_path, class: "nav-link active", aria_current: "page" %>
+            <%= link_to "Sign up", signup_path, class: "nav-link active fw-bold", aria_current: "page" %>
           </li>
         <% end %>
         
