adjustments on navbar and readme file updated, deploying for production

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,9 +11,9 @@
           <h6>Fond of technology, eager and dedicated to learn Software Engineering. I hope that through this website you can find some use for
             my skills :)</h6>
           <h6>Check what I covered so far on my learning journey and implementation (CRUD):</h6>
-          <%= link_to "front-end", front_end_path, class: "btn btn-primary m-1", target: :_blank %>
-          <%= link_to "back-end", back_end_path, class: "btn btn-primary m-1", target: :_blank %>
-          <%= link_to "CRUD", articles_path, class: "btn btn-success m-1", target: :_blank %>
+          <%= link_to "front-end", front_end_path, class: "btn btn-primary m-1" %>
+          <%= link_to "back-end", back_end_path, class: "btn btn-primary m-1" %>
+          <%= link_to "CRUD", articles_path, class: "btn btn-success m-1" %>
           <h6 class="mt-2">You can also check this website repository at &copy; <%= link_to "Github", "https://github.com/filipezef/zeferino-blog", target: :_blank %></h6>
         </div>
 
