--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2>New Article</h2>
+    <p class="mt-3">New Article</p>
   </div>
 </section>
 
