--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2><%= @article.title %></h2>
+    <p class="mt-3"><%= @article.title %></p>
   </div>
 </section>
 
