--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-5">
   <div class="lead container">
-    <h2>Categories</h2>
+    <p class="mt-3">Categories</p>
   </div>
 </section>
 
