--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <div class="container-fluid">
-    <%= link_to image_tag("navbar/z.png"), root_path, class: "navbar-brand", id: "logo", target: :_blank %>
+    <%= link_to image_tag("navbar/z.png"), root_path, class: "navbar-brand", id: "logo" %>
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,25 +11,36 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-            <%= link_to "About", about_path, class: "nav-link active fw-bold", aria_current: "page" %>
+            <%= link_to "About", about_path, class: "nav-link active fw-bold" %>
         </li>
 
         <% if logged_in? %>
           <li class="nav-item">
-              <%= link_to "Bloggers", users_path, class: "nav-link active fw-bold", aria_current: "page" %>
+              <%= link_to "Bloggers", users_path, class: "nav-link active fw-bold" %>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Messages
+              Articles
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <% if logged_in? %>
-                <%= link_to "New message", new_article_path, class: "dropdown-item fw-bold" %>
-              <% end %>
-              <li><%= link_to "View messages", articles_path, class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "New article", new_article_path, class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "View articles", articles_path, class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "View categories", categories_path, class: "dropdown-item fw-bold" %></li>
             </ul>
           </li>
+
+            <% if current_user.admin? %>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Categories
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><%= link_to "New category", new_category_path, class: "dropdown-item fw-bold" %></li>
+                  <li><%= link_to "View categories", categories_path, class: "dropdown-item fw-bold" %></li>
+                </ul>
+              </li>
+            <% end %>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,7 +52,7 @@
               <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger fw-bold", method: :delete, data: { confirm: "Are you sure?" } %></li>
             </ul>
           </li>
-            <%= link_to "Logout", logout_path, class: "btn btn-danger", aria_current: "page", method: :delete %>
+            <%= link_to "Logout", logout_path, class: "btn btn-danger", method: :delete %>
           </li>
         <% else %>
           <li class="nav-item">
