--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2>Bloggers</h2>
+    <p class="mt-3">Bloggers</p>
   </div>
 </section>
 
