--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 <section class="row-alt mt-3 mb-5">
   <div class="lead container mt-2">
-    <h2><%= @user.username %>'s profile</h2>
+    <p class="mt-3"><%= @user.username %>'s profile</p>
   </div>
 </section>
 
