HTML and CSS checkers, small corrections (no pratical effect)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,9 +71,6 @@ body {
   ========================================
 */
 
-h1, h2, h3, h4 {
-  color: #f3a007;
-}
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
@@ -123,7 +120,7 @@ strong {
 */
 
 a {
-  color: #f3a007;
+  color: #98a7fc;
   text-decoration: none;
 }
 a:hover {
@@ -281,7 +278,7 @@ p a {
   color: #ffffff !important;
 }
 .nav-link:hover {
-  color: #f3a007 !important;
+  color: black !important;
 }
 #logo img {
   height: 47px; 
