--- a/app/views/pages/front_end.html.erb
+++ b/app/views/pages/front_end.html.erb
@@ -21,8 +21,7 @@
 
       <%= link_to image_tag("css-html/shay-howe-advanced.PNG") + "Shay Howe - HTML & CSS - Advanced", "https://learn.shayhowe.com/advanced-html-css/", class: "teaser", title: "To be started soon", target: :_blank %>
 
-      <h3></h3>
-      <h4>Learn to Code Advanced HTML & CSS takes a deeper look at front-end design and development, expanding on what is covered in the beginner&#8217;s guide.</h4>
+      <h4 class="mt-3">Learn to Code Advanced HTML & CSS takes a deeper look at front-end design and development, expanding on what is covered in the beginner&#8217;s guide.</h4>
     </section><!--
 
     MDN Web Docs - CSS Styling Tables
@@ -32,8 +31,7 @@
 
       <%= link_to image_tag("css-html/MDN-web-docs-css-styling-tables.PNG") + "MDN - CSS Styling Tables", "https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/Styling_tables", class: "teaser", title: "To be started soon", target: :_blank %>
       
-      <h3></h3>
-      <h4>This article provides a guide to making HTML tables look good, with some specific table styling techniques highlighted.</h4>
+      <h4 class="mt-3">This article provides a guide to making HTML tables look good, with some specific table styling techniques highlighted.</h4>
     </section>
 
 
@@ -45,8 +43,7 @@
 
       <%= link_to image_tag("css-html/shay-howe-basic.PNG") + "Shay Howe - Develop & Style Websites", "https://learn.shayhowe.com/html-css/", class: "teaser", title: "Concluded on December 2021", target: :_blank %>
 
-      <h3></h3>
-      <h4>A simple and comprehensive guide dedicated to helping beginners learn HTML and CSS.</h4>
+      <h4 class="mt-3">A simple and comprehensive guide dedicated to helping beginners learn HTML and CSS.</h4>
     </section><!--
 
     MDN Web Docs - CSS Basics
@@ -57,8 +54,7 @@
 
       <%= link_to image_tag("css-html/MDN-web-docs-css.PNG") + "MDN - CSS basics", "https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics", class: "teaser", title: "Concluded on December 2021", target: :_blank %>
 
-      <h3></h3>
-      <h4>CSS basics walks through what you need to get started.</h4>
+      <h4 class="mt-3">CSS basics walks through what you need to get started.</h4>
     </section><!--
 
     MDN Web Docs - HTML Basics
@@ -69,8 +65,7 @@
 
       <%= link_to image_tag("css-html/MDN-web-docs-html.PNG") + "MDN - HTML basics", "https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics", class: "teaser", title: "Concluded on December 2021", target: :_blank %>
 
-      <h3></h3>
-      <h4>As the title suggests, this article will give you a basic understanding of HTML and its functions.</h4>
+      <h4 class="mt-3">As the title suggests, this article will give you a basic understanding of HTML and its functions.</h4>
     </section>
 
   </div>
@@ -95,8 +90,7 @@
 
       <%= link_to image_tag("python/hackerrank-30-days-code.PNG") + "HackerRanck - 30 Days of Code", "https://www.hackerrank.com/domains/tutorials/30-days-of-code", class: "teaser", title: "18 out of 30 classes completed (60% completed)", target: :_blank %>
 
-      <h3></h3>
-      <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
+      <h4 class="mt-3">Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
     </section><!--
     
     HackerRank - Problem Solving
@@ -106,8 +100,7 @@
 
       <%= link_to image_tag("python/hackerrank-problem-solving.PNG") + "HackerRanck - Problem Solving", "https://www.hackerrank.com/domains/algorithms/", class: "teaser", title: "Silver badge (20% completed)", target: :_blank %>
 
-      <h3></h3>
-      <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
+      <h4 class="mt-3">Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
     </section>
 
     <!--Trybe - JS basics-->
@@ -118,8 +111,7 @@
 
       <%= link_to image_tag("js/trybe.PNG") + "Trybe - JS basics", "https://freecourse.betrybe.com/", class: "teaser", title: "Concluded on June 2021", target: :_blank %>
 
-      <h3></h3>
-      <h4>Course to cover the very basics of coding with JS.</h4>
+      <h4 class="mt-3">Course to cover the very basics of coding with JS.</h4>
     </section><!--
 
     Hiring Coders - JS Basics
@@ -130,8 +122,7 @@
 
       <%= link_to image_tag("js/hiringcoders.PNG") + "Hiring Coders - JS basics", "https://hiringcoders2.slack.com/", class: "teaser", title: "Concluded on June 2021", target: :_blank %>
 
-      <h3></h3>
-      <h4>Course to cover the very basics of coding with JS. No longer available.</h4>
+      <h4 class="mt-3">Course to cover the very basics of coding with JS. No longer available.</h4>
     </section>
 
   </div>
