--- a/app/views/pages/back_end.html.erb
+++ b/app/views/pages/back_end.html.erb
@@ -21,8 +21,7 @@
 
       <%= link_to image_tag("rails/ruby-on-rails-developer-udemy.PNG") + "Ruby on Rails Developer Course", "https://www.udemy.com/course/the-complete-ruby-on-rails-developer-course/", class: "teaser", title: "Currently on class 223 out of 446 (50% completed)", target: :_blank %>
      
-      <h3></h3>
-      <h4>Learn to make innovative web apps with Ruby on Rails and unleash your creativity</h4>
+      <h4 class="mt-3">Learn to make innovative web apps with Ruby on Rails and unleash your creativity</h4>
     </section><!--
 
     One Bit Code - Pure Ruby
@@ -32,8 +31,7 @@
 
       <%= link_to image_tag("rails/onebitcode-ruby-puro.PNG") + "Pure Ruby", "https://onebitcode.com/course/ruby-puro/", class: "teaser", title: "10 out of 10 classes done (missing to complete final project)", target: :_blank %>
 
-      <h3></h3>
-      <h4>10 classes with examples and tutorials, at the end of the course it is proposed a final project to be deployed.</h4>
+      <h4 class="mt-3">10 classes with examples and tutorials, at the end of the course it is proposed a final project to be deployed.</h4>
     </section>
 
   </div>
@@ -58,8 +56,7 @@
 
       <%= link_to image_tag("python/python3-udemy.PNG") + "Python 3", "https://www.udemy.com/course/python-3-do-zero-ao-avancado/", class: "teaser", title: "96 out of 434 class completed (22% completed)", target: :_blank %>
 
-      <h3></h3>
-      <h4>Coding with Django, PyQT5, Selenium, Regexp, Tests e TDD, POO, Design Patterns GoF and algoritms.</h4>
+      <h4 class="mt-3">Coding with Django, PyQT5, Selenium, Regexp, Tests e TDD, POO, Design Patterns GoF and algoritms.</h4>
     </section><!--
     
     HackerRank - 30 Days of Code
@@ -69,8 +66,7 @@
 
       <%= link_to image_tag("python/hackerrank-30-days-code.PNG") + "30 Days of Code", "https://www.hackerrank.com/domains/tutorials/30-days-of-code", class: "teaser", title: "18 out of 30 classes done (60% completed)", target: :_blank %>
 
-      <h3></h3>
-      <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
+      <h4 class="mt-3">Tutorial with proposed problems for solution through coding (multiple lenguages supported)</h4>
     </section><!--
     
     HackerRank - Problem Solving
@@ -80,8 +76,7 @@
 
       <%= link_to image_tag("python/hackerrank-problem-solving.PNG") + "Problem Solving", "https://www.hackerrank.com/domains/algorithms/", class: "teaser", title: "Silver badge (20% completed)", target: :_blank %>
 
-      <h3></h3>
-      <h4>Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
+      <h4 class="mt-3">Tutorial with proposed problems for solution through coding (multiple lenguages supported).</h4>
     </section>
 
   </div>
@@ -107,8 +102,7 @@
 
       <%= link_to image_tag("sql/sql-course1.PNG") + "SQL Course 1", "https://www.sqlcourse.com/", class: "teaser", title: "Concluded on January 2022", target: :_blank %>
      
-      <h3></h3>
-      <h4>The basics of each SQL command.</h4>
+      <h4 class="mt-3">The basics of each SQL command.</h4>
     </section><!--
 
     One Bit Code - Pure Ruby
@@ -119,8 +113,7 @@
 
       <%= link_to image_tag("sql/sql-course2.PNG") + "SQL Course 2", "https://www.sqlcourse2.com/", class: "teaser", title: "Concluded on January 2022", target: :_blank %>
 
-      <h3></h3>
-      <h4>Advanced features and clauses of the SELECT statement.</h4>
+      <h4 class="mt-3">Advanced features and clauses of the SELECT statement.</h4>
     </section>
 
   </div>
