--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,28 +5,28 @@
       
       <%= form_with(model: @user, class: "shadow p-3 mb-3 rounded", id: "form", local: true) do |f| %>
         
-        <div class="form-group row", id="form">
+        <div class="form-group row" id="form">
           <%= f.label :username, class: "col-2 col-form-label text-light mb-3" %>
-          <div class="col-10", id="form" >
+          <div class="col-10" id="form" >
             <%= f.text_field :username, class: "form-control shadow rounded", placeholder: "Enter a username" %>
           </div>
         </div>
         
-        <div class="form-group row", id="form">
+        <div class="form-group row" id="form">
           <%= f.label :email, class: "col-2 col-form-label text-light" %>
           <div class="col-10 mb-3"> 
             <%= f.email_field :email, class: "form-control shadow rounded", placeholder: "Enter your email address" %>
           </div>
         </div>
 
-        <div class="form-group row", id="form">
+        <div class="form-group row" id="form">
           <%= f.label :password, class: "col-2 col-form-label text-light" %>
           <div class="col-10 mb-3"> 
             <%= f.password_field :password, class: "form-control shadow rounded", placeholder: "Choose a password" %>
           </div>
         </div>
 
-        <div class="form-group row justify-content-center", id="form">
+        <div class="form-group row justify-content-center" id="form">
           <%= f.submit(@user.new_record? ? "Sign up" : "Update", class: "btn btn-success col-2") %>
         </div>
         
