update home page, blog identity like

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -286,6 +286,14 @@ p a {
   height: 47px; 
 }
 
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
 /* Set the border color */
           
 .custom-toggler.navbar-toggler {
