--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id="sticky-footer" class="py-4 bg light">
   <div class="container text-center">
-    <small>&copy; <%= link_to "Filipe Zeferino", root_path, class: "text-white" %></small>
+    <small>by &copy; <%= link_to "Filipe Zeferino", "https://zeferino.herokuapp.com", class: "text-white", target: :_blank %></small>
   </div>
 </footer>
