--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
   <div class="container-fluid">
-    <%= link_to image_tag("navbar/z.png"), root_path, class: "navbar-brand", id: "logo", alt: "Z logo" %>
+    <%= link_to "ZefBlog", root_path, class: "navbar-brand", id: "logo", alt: "Z logo" %>
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,50 +12,50 @@
 
         <% if logged_in? %>
           <li class="nav-item">
-              <%= link_to "Bloggers", users_path, class: "nav-link active fw-bold" %>
+              <%= link_to "Bloggers", users_path, class: "nav-link active" %>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Articles
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "New article", new_article_path, class: "dropdown-item fw-bold" %></li>
-              <li><%= link_to "View articles", articles_path, class: "dropdown-item fw-bold" %></li>
-              <li><%= link_to "View categories", categories_path, class: "dropdown-item fw-bold" %></li>
+              <li><%= link_to "New article", new_article_path, class: "dropdown-item" %></li>
+              <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></i>
+              <li><%= link_to "View categories", categories_path, class: "dropdown-item" %></li>
             </ul>
           </li>
 
             <% if current_user.admin? %>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Categories
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><%= link_to "New category", new_category_path, class: "dropdown-item fw-bold" %></li>
-                  <li><%= link_to "View categories", categories_path, class: "dropdown-item fw-bold" %></li>
+                  <li><%= link_to "New category", new_category_path, class: "dropdown-item" %></li>
+                  <li><%= link_to "View categories", categories_path, class: "dropdown-item" %></li>
                 </ul>
               </li>
             <% end %>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= "(Admin)" if current_user.admin? %> <%= current_user.username %>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><%= link_to "View Profile", user_path(current_user), class: "dropdown-item fw-bold" %></li>
-              <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item fw-bold" %></li>
-              <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger fw-bold", method: :delete, data: { confirm: "Are you sure?" } %></li>
+              <li><%= link_to "View Profile", user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %></li>
+              <li><%= link_to "Delete Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %></li>
             </ul>
           </li>
             <%= link_to "Logout", logout_path, class: "btn btn-danger", method: :delete %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Log in", login_path, class: "nav-link active fw-bold" %>
+            <%= link_to "Log in", login_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign up", signup_path, class: "nav-link active fw-bold" %>
+            <%= link_to "Sign up", signup_path, class: "nav-link active" %>
           </li>
         <% end %>
         
